--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".SimpleCustomeViewActivity" />
+        <activity android:name=".JuniorTrainingActivity" />
 
     </application>
 
