--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 
 buildscript {
-    ext.kotlin_version = "1.1.2-4"
+    ext.kotlin_version = "1.3.72"
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
